@@ -4,8 +4,10 @@ import com.robertx22.mine_and_slash.database.currency.base.ICurrencyItemEffect;
 import com.robertx22.mine_and_slash.registry.SlashRegistry;
 import com.robertx22.mine_and_slash.saveclasses.Unit;
 import com.robertx22.mine_and_slash.saveclasses.gearitem.gear_bases.TooltipContext;
+import com.robertx22.mine_and_slash.saveclasses.item_classes.GearItemData;
 import com.robertx22.mine_and_slash.saveclasses.item_classes.RecipeItemData;
 import com.robertx22.mine_and_slash.uncommon.capability.entity.EntityCap.UnitData;
+import com.robertx22.mine_and_slash.uncommon.datasaving.Gear;
 import com.robertx22.mine_and_slash.uncommon.datasaving.Load;
 import com.robertx22.mine_and_slash.uncommon.datasaving.Recipe;
 import com.robertx22.mine_and_slash.uncommon.interfaces.data_items.ICommonDataItem;
@@ -36,7 +38,12 @@ public class OnTooltip {
 
         try {
             if (Screen.hasControlDown()) {
-                return;
+
+                GearItemData gear = Gear.Load(event.getItemStack());
+
+                if (gear == null) {
+                    return;
+                }
             }
 
             if (event.getPlayer() == null || event.getPlayer().world == null || !event.getPlayer().world.isRemote) {
