@@ -1,3 +1,0 @@
-{
-  "type": "mmorpg:identify_tome_recipe"
-}
